tests/sksl/errors/Ossfuzz40428.glsl
### Compilation failed:

error: 1: integer is out of range for type 'int': 2147483649
error: 1: array size must be an integer
2 errors
